--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,25 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'routing'
 version '1.0-SNAPSHOT'
+
+mainClassName = 'App'
+
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
     implementation 'com.sparkjava:spark-core:2.9.3'
     implementation 'com.sparkjava:spark-template-handlebars:2.7.1'
     implementation 'org.slf4j:slf4j-simple:1.7.33'
-    implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.2'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.3.1'
     implementation 'org.sql2o:sql2o:1.6.0'
 }
 
