--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
                     <!-- Change this to YOUR application name! -->
                     <appName>routinggg</appName>
                     <processTypes>
-                        <web>java -jar target/Routing-1.0-jar-with-dependencies.jar</web>
+                        <web>java -jar target/routing-1.0-jar-with-dependencies.jar</web>
                     </processTypes>
                 </configuration>
             </plugin>
